# truthparticle_ntuples

./: .asetup.save  .gitignore  README.md  gitcommit.sh  memo
ftt/: CMakeLists.txt
ftt/Ftagtt/: CMakeLists.txt
ftt/Ftagtt/grid/: ftag-grid-nm.sh  ftag-grid-sub.sh  grid-submit.bak  grid-submit.sh
ftt/Ftagtt/grid/inputs/: samples.txt
ftt/Ftagtt/util/: main.cxx
ftt/submit/: job.tgz
